--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "eslint": "^8.6.0",
     "huepi": "^1.2.2",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
