--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-promise": "^3.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
