--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "eslint": "^8.6.0",
     "huepi": "^1.2.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-promise": "^3.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
